package se.qxx.fiatlux.domain;
  
option java_package = "se.qxx.fiatlux.domain";
option java_generic_services = true;
  
//---------------------------------------------------------------------------------------
//----------------------------------------------------------------------- Enumerations
//---------------------------------------------------------------------------------------

enum DeviceType {
	onoffswitch = 1;
	dimmer = 2;
}

enum Action {
    On = 1;
    Off = 2;
}

enum Protocol {
    arctech = 1;
}

enum Model {
    selflearning_dimmer = 1;
    selflearning_switch = 2;
    code_switch = 3;
}
  
//---------------------------------------------------------------------------------------
//---------------------------- ------------------------------------------- Objects
//---------------------------------------------------------------------------------------

message Empty{};

message Success{
	required bool success = 1;
};

message Device {
	required int32 DeviceID = 1;
	required string Name = 2;
	required bool IsOn = 3;
	required DeviceType Type = 4;
	optional int64 nextScheduledTime = 5;
	optional Action nextAction = 6;
}

message ListOfDevices { 
	repeated Device device = 1;
} 

message DimCommand {
	required Device Device = 1;
	required int32 DimPercentage = 2;
}

message AddDeviceCommand {
    required string name = 1;
    required Protocol protocol = 2;
    required Model model = 3;
    optional string house = 4;
    optional string unit = 5;
}

//---------------------------------------------------------------------------------------
//----------------------------------------------------------------------- RPC
//---------------------------------------------------------------------------------------

service FiatLuxService {
	rpc List(Empty) returns (ListOfDevices);	
	rpc TurnOn(Device) returns (Success);
	rpc TurnOff(Device) returns (Success);
	rpc Dim(DimCommand) returns (Success);
	rpc AddDevice(AddDeviceCommand) returns (Device);
	rpc Learn(Device) returns (Success);
}

